Fix text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,11 +63,6 @@ body {
 	-webkit-user-select: none;
 }
 
-div {
-	padding-left: 5vw;
-	padding-right: 5vw;	
-}
-
 h1.about-us {
 	text-align: center;
 	text-transform: uppercase;
@@ -79,7 +74,8 @@ h1.about-us {
 
 p {
 	font-family: monospace;
-	font-size: 2vw;
+	font-size: 1.5vw;
 	white-space: nowrap; 
+	text-align: center;
 	color: #3b3f53;
 }
